<resources>
    <string name="app_name">MinhaProva</string>
    <string name="text1">Texto 1</string>
    <string name="text2">Texto 2</string>
    <string name="Button1">Botão 1</string>
    <string name="Button2">Botão 2</string>
    <string name="Button3">Botão 3</string>
    <string name="Button4">Botão 4</string>
    <string name="ButtonLast">Anterior</string>
    <string name="ButtonNext">Próximo</string>
    <string name="welcome">Bem vindo!</string>
    <string name="good">Ótimo!</string>
    <string name="next">Fica para a próxima!</string>
    <string name="titulo">Titulo:</string>
    <string name="autor">Autor:</string>
    <string name="nota">Nota:</string>
    <string name="ano">Ano:</string>
</resources>